fix: ui improvements
- fetch assets in background on high level
- handle assets in background on high level
- ui improvements on account addition
- ui improvements on network addition
- loading indicator

--- a/Todo
+++ b/Todo
@@ -1,9 +1,9 @@
 So on react app: (first version)
 [x] Load the networks from a list on startup
-[] Store accounts in local storage (or indexed db)
+[x] Store accounts in local storage (or indexed db)
 [x] Flat structure of the items
 [x] Show summary of the assets
 [] Remove the redundant stuff
 [] fix fetch coin values 
 [] filter by stuff
-[] update UI for better account management
+[x] update UI for better account management
