--- a/Todo
+++ b/Todo
@@ -18,7 +18,7 @@ Feedback from Kian:
   Features: 
     [] Networks should have icons (hardcoded)
     [] Accounts should have icon as well (https://github.com/polkadot-js/ui/tree/master/packages/react-identicon#readme). 
-    [] Table should be sort-able 
+    [x] Table should be sort-able 
     [] Hovering on any token amount should show its decimal points, and the actual underlying value
     [] Native assets and derivatives should be distinguished (task for Kian)
     [] Accounts and networks should have an option to be saved in local storage
