--- a/Todo
+++ b/Todo
@@ -21,6 +21,6 @@ Feedback from Kian:
     [x] Table should be sort-able 
     [] Hovering on any token amount should show its decimal points, and the actual underlying value
     [] Native assets and derivatives should be distinguished (task for Kian)
-    [] Accounts and networks should have an option to be saved in local storage
+    [x] Accounts and networks should have an option to be saved in local storage
     [] We should have a list of hardcoded networks (copy pasta from polkadot.js/apps), and upon adding a new network, you should be able to just type “Polkadot” and it should potentially suggest a known ws endpoint for it.
     [] Github deployment soon so we can shill it a bit and also request tips
