--- a/Todo
+++ b/Todo
@@ -1,14 +1,21 @@
 So on react app: (first version)
-[x] Load the networks from a list on startup
-[x] Store accounts in local storage (or indexed db)
-[x] Flat structure of the items
-[x] Show summary of the assets
-[x] update UI for better account management
-[x] Remove the redundant stuff
-[x] Network input validation
-[x] Account input validation
-[] fix fetch coin values (background fetch?)
-[] Auto complete for networks
+  [x] Load the networks from a list on startup
+  [x] Store accounts in local storage (or indexed db)
+  [x] Flat structure of the items
+  [x] Show summary of the assets
+  [x] update UI for better account management
+  [x] Remove the redundant stuff
+  [x] Network input validation
+  [x] Account input validation
+  [x] update app name
+
+Core: 
+  [] fix fetch coin values (background fetch?)
+
+Networks and Accounts: 
+  [] Auto complete for networks: We should have a list of hardcoded networks (copy pasta from polkadot.js/apps), and upon adding a new network, you should be able to just type “Polkadot” and it should potentially suggest a known ws endpoint for it.
+  [] Networks should have icons (hardcoded)
+  [] Accounts should have icon as well (https://github.com/polkadot-js/ui/tree/master/packages/react-identicon#readme). 
 
 Actions on Token Table:
   [x] Sortable Table
@@ -18,6 +25,7 @@ Actions on Token Table:
   [] Filtering by Token Name
   [] Filtering table by values 
   [] Grouping stuff by headliners (harder)
+  [] Hovering on any token amount should show its decimal points, and the actual underlying value
 
 Feedback from Kian:
   Bugs: 
@@ -25,11 +33,7 @@ Feedback from Kian:
     [x] Progress bar is not accurate
   
   Features: 
-    [] Networks should have icons (hardcoded)
-    [] Accounts should have icon as well (https://github.com/polkadot-js/ui/tree/master/packages/react-identicon#readme). 
     [x] Table should be sort-able 
-    [] Hovering on any token amount should show its decimal points, and the actual underlying value
-    [] Native assets and derivatives should be distinguished (task for Kian)
     [x] Accounts and networks should have an option to be saved in local storage
-    [] We should have a list of hardcoded networks (copy pasta from polkadot.js/apps), and upon adding a new network, you should be able to just type “Polkadot” and it should potentially suggest a known ws endpoint for it.
+    [] Native assets and derivatives should be distinguished (task for Kian)
     [] Github deployment soon so we can shill it a bit and also request tips
