--- a/Todo
+++ b/Todo
@@ -1,36 +1,36 @@
 UI:
-  - Fetching Coin Data: 
+  - Fetching Coin Data:
     [] Live coin data
 
   - Networks and Accounts:
     [] Auto complete for networks: We should have a list of hardcoded networks (copy pasta from polkadot.js/apps), and upon adding a new network, you should be able to just type “Polkadot” and it should potentially suggest a known ws endpoint for it.
     [] Networks should have icons (hardcoded)
     [] Accounts should have icon as well (https://github.com/polkadot-js/ui/tree/master/packages/react-identicon#readme).
-  
+
   - Actions on Token Table:
     [] Filtering small amounts
     [] Filtering by Token Name
     [] Filtering table by values
     [] Grouping stuff by headliners (harder)
-    [] Add unit test. 
+    [] Add unit test.
 
   - [ ] UI Network Preludes: ALL, DOTSama, Polkadot, Kusama
-  - [ ] Account Import from Extensions 
+  - [ ] Account Import from Extensions
 
-CORE: 
+CORE:
   [] Provide API to fetch coins data from various sources and keep them up to date
   [] Detect address format (ETH + BTC)
-  [] Dictionary for network names to WSS urls (to be maintained by community) (Re-export from polkadot-js/app/endpoints)
+  [x] Dictionary for network names to WSS urls (to be maintained by community) (Re-export from polkadot-js/app/endpoints)
   [] Dictionary for asset sources to be exported from Core
   [] Native assets and derivatives should be distinguished (task for Kian)
-  [] Clean up Core/UI related functions from class
+  [x] Clean up Core/UI related functions from class
   [] Add unit test
   [] Remove TS-ignore/Ts-No checks.
-  [] Refactor core with better design
+  [x] Refactor core with better design
 
-CLI: 
-  [] Move summary from Core to CLI
+CLI:
+  [x] Move summary from Core to CLI
 
-Delivery: 
+Delivery:
   [] README.md + CONTRIBUTING.md
   [] Github deployment soon so we can shill it a bit and also request tips
